fix layout issues

--- a/static/css/articleslist.css
+++ b/static/css/articleslist.css
@@ -104,9 +104,10 @@
 }
 .article-title{
     font-weight: 700;
-    font-size: 1.3em;
+    font-size: 1.2em;
     margin: 10px 0;
     display: inline;
+    line-height: 1em;
 }
 .article-intro{
     margin: 0;
@@ -136,7 +137,7 @@
     justify-content: space-between;
     align-items: center;
 }
-#reader_content{
+#reader_content, #mobile_reader_content{
     margin: 20px 0;
 }
 #reader_title{
